glx/testdata/invalid/invalid-assertion-claims/assertions/invalid-claims.glx
assertions:
  assertion-invalid-claim:
    subject: person-father
    claim: nonexistent_property
    value: "some value"
    confidence: high
